--- a/srcPython/mod06CSiAPI_Modelado Membrane&Wall&Plate.ipynb
+++ b/srcPython/mod06CSiAPI_Modelado Membrane&Wall&Plate.ipynb
@@ -594,6 +594,20 @@
     "del smodel, connect_to_app\n",
     "exit(-1)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Referencias."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- [1] [Archivo de video]: https://youtu.be/yxljs6hWr-o, https://youtu.be/Za4I0leC7F8, https://youtu.be/QeAdkCaRn1c"
+   ]
   }
  ],
  "metadata": {
