--- a/srcPython/mod09CSiAPI e1_Modelo_Parametrico_ETABS.ipynb
+++ b/srcPython/mod09CSiAPI e1_Modelo_Parametrico_ETABS.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,16 +22,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Estructura_Parametrica:\n",
+    "class EstructuraParametrica(object):\n",
     "    name_project = \"Estructura Paramétrica\"\n",
-    "    def __init__(self, dx, dy, hz, units, tn, CM_load, CV_load, path):\n",
+    "    def __init__(self, dx, dy, hz, tn, path):\n",
     "        self.dx = dx\n",
     "        self.dy = dy\n",
     "        self.hz = hz\n",
-    "        self.units = units\n",
     "        self.tn = tn            # espesor de la losa\n",
-    "        self.CM_load = CM_load\n",
-    "        self.CV_load = CV_load\n",
+    "        # self.CM_load = CM_load\n",
+    "        # self.CV_load = CV_load\n",
     "        self.path = path        # ruta de datos requeridos\n",
     "\n",
     "        self.x = [0] + list(accumulate(self.dx))\n",
@@ -39,31 +38,31 @@
     "        self.z = [0] + list(accumulate(self.hz))\n",
     "        print(\"Coordenadas X:\", self.x, \"\\nCoordenadas Y:\", self.y, \"\\nCoordenadas Z:\", self.z)\n",
     "\n",
-    "        self.smodel, self.connect_to_app, self.helper = self.Connect_ETABS()\n",
+    "        self.smodel = self.Connect_ETABS()\n",
     "\n",
     "        # self.connect_to = 2\n",
     "        # state, connect_software = self.connect_default()\n",
     "        # connect_software.ApplicationStart()  # Inicia la aplicación ETABS o SAP2000\n",
-    "        # self.smodel = connect_software.smodel\n",
+    "        # self.smodel = connect_software.SapModel\n",
     "        \n",
     "        # response = self.smodel.InitializeNewModel()\n",
     "        # response = self.smodel.File.NewBlank()\n",
     "                \n",
-    "        self.Units() # self.units\n",
+    "        # self.set_units() # self.set_units\n",
     "        self.Sections(self.path)\n",
     "        self.Load_Combinations()\n",
     "        self.Frames(self.x, self.y, self.z, self.path)\n",
     "        self.Slabs(self.tn, self.x, self.y, self.z)\n",
-    "        self.Loads(self.CM_load, self.CV_load)\n",
+    "        # self.Loads(self.CM_load, self.CV_load)\n",
     "\n",
-    "        # self.smodel.View.RefreshView()\n",
+    "        self.smodel.View.RefreshView()\n",
     "\n",
     "    def Connect_ETABS(self):\n",
     "        helper = comtypes.client.CreateObject('ETABSv1.Helper')             # Maneja las conexiones con ETABS\n",
     "        helper = helper.QueryInterface(comtypes.gen.ETABSv1.cHelper)        # Accede a métodos avanzados para interactuar con ETABS\n",
     "        ETABSObject = helper.GetObject(\"CSI.ETABS.API.ETABSObject\")         # Se conecta a ETABS \n",
     "        smodel = ETABSObject.SapModel                                       # Accede al modelo estructural actualmente cargado en ETABS\n",
-    "        return smodel, ETABSObject, helper\n",
+    "        return smodel\n",
     "\n",
     "    def connect_default(self):\n",
     "        connect_to_app = None\n",
@@ -74,27 +73,28 @@
     "            connect_to_app = helper.CreateObjectProgID(\"CSI.ETABS.API.ETABSObject\")\n",
     "        except (OSError, comtypes.COMError):\n",
     "            # print(f\"Cannot start a new instance of the program({self.app_csi}).\")\n",
-    "            return (False, connect_to_app)        \n",
+    "            return (False, connect_to_app)\n",
     "        # print(f\"Coneccion establecida para {self.app_csi}!.\")\n",
     "        return (True, connect_to_app)\n",
     "    \n",
-    "    def Units(self):\n",
-    "        # kgf_cm_C = 14\n",
-    "        # kN_m_C = 6\n",
-    "        self.smodel.SetPresentUnits(self.units)\n",
+    "    def set_units(self, units):\n",
+    "        self.smodel.SetPresentUnits(units)\n",
     "    \n",
     "    def Frames(self, x, y, z, path):\n",
     "        beams_x = pd.read_excel(path, sheet_name='VIGAS_X')\n",
     "        beams_y = pd.read_excel(path, sheet_name='VIGAS_Y')\n",
-    "        columns = pd.read_excel(path, sheet_name='COLUMNAS')\n",
+    "        columns = pd.read_excel(path, sheet_name='COLUMNAS')        \n",
     "\n",
     "        for i in range(len(x)):\n",
     "            for j in range(len(y)):\n",
     "                for k in range(len(z)-1):\n",
     "                    # Columnas\n",
-    "                    node = 'NODO '+ str(int(i+1))\n",
-    "                    ret = self.smodel.FrameObj.AddByCoord(x[i], y[j], z[k], x[i], y[j], z[k+1], \"\", columns[node][j])\n",
-    "        \n",
+    "                    node = f'NODO {str(int(i+1))}'\n",
+    "                    ret = self.smodel.FrameObj.AddByCoord(\n",
+    "                        x[i], y[j], z[k], \n",
+    "                        x[i], y[j], z[k+1], \n",
+    "                        \"\", columns[node][j]\n",
+    "                    )                    \n",
     "        for k in range(1, len(z)):\n",
     "            for j in range(len(y)):\n",
     "                for i in range(len(x)-1):\n",
@@ -107,7 +107,10 @@
     "                    # Vigas en Y\n",
     "                    span = 'TRAMO '+ str(int(i+1))\n",
     "                    ret = self.smodel.FrameObj.AddByCoord(x[i], y[j], z[k], x[i], y[j+1], z[k], \"\", beams_y[span][j])\n",
-    "    \n",
+    "        self.smodel.View.RefreshView()\n",
+    "        num_frames = self.smodel.FrameObj.Count()\n",
+    "        print(\"Total de elementos de marco en el modelo:\", num_frames)\n",
+    "\n",
     "    def Slabs(self, tn, x, y, z):\n",
     "        Lname = \"L\"+ str(tn)\n",
     "        ret = self.smodel.PropArea.SetSlab(Lname, 0, 1, \"fc = 280 kg/cm2\", tn)\n",
@@ -199,22 +202,31 @@
     "            ret = self.smodel.AreaObj.SetLoadUniform(name, \"CV\", -CV_load, 2, True, \"Local\", 0)\n",
     "\n",
     "    def close_software(self):\n",
-    "        self.smodel.File.Save(self.name_project + \".edb\")            # Guarda el modelo\n",
+    "        self.smodel.File.Save(self.name_project + \".edb\")   # Guarda el modelo\n",
     "\n",
-    "        # self.smodel.ApplicationExit(False)                            # Cierra ETABS sin guardar cambios adicionales\n",
+    "        # self.smodel.ApplicationExit(False)                # Cierra ETABS sin guardar cambios adicionales\n",
     "        print(\"No se pudo cerrar\") if (self.smodel.ApplicationExit(False)) else print(\"Se cerro con exito.\")\n",
-    "        self.connect_to_app.Quit()                                      # Finaliza la conexión con ETABS\n",
-    "        self.helper = None                                               # Libera el objeto helper\n",
+    "        # self.connect_to_app.Quit()  # Finaliza la conexión con ETABS\n",
+    "        self.helper = None  # Libera el objeto helper\n",
     "\n",
-    "        smodel, connect_to_app = None, None\n",
-    "        del smodel, connect_to_app\n",
+    "        smodel= None\n",
+    "        del smodel\n",
     "        \n",
     "        return 0"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center>\n",
+    "<img src=\"images/ModeloA.drawio.svg\" alt='' width=\"80%\"/>\n",
+    "</center>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +235,19 @@
      "text": [
       "Coordenadas X: [0, 500, 900, 1400] \n",
       "Coordenadas Y: [0, 400, 700, 1000, 1400] \n",
-      "Coordenadas Z: [0, 280, 580, 880, 1180, 1480, 1780, 2080, 2380, 2680]\n"
+      "Coordenadas Z: [0, 280, 580]\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "call takes exactly 5 arguments (12 given)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[44], line 30\u001b[0m\n\u001b[0;32m     27\u001b[0m CM_load \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m100e-4\u001b[39m                    \u001b[38;5;66;03m# Carga Muerta\u001b[39;00m\n\u001b[0;32m     28\u001b[0m CV_load \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m200e-4\u001b[39m                    \u001b[38;5;66;03m# Carga Viva\u001b[39;00m\n\u001b[1;32m---> 30\u001b[0m estructura01 \u001b[38;5;241m=\u001b[39m \u001b[43mEstructuraParametrica\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdy\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mhz\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtn\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpath\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     31\u001b[0m estructura01\u001b[38;5;241m.\u001b[39mset_units(units)\n\u001b[0;32m     32\u001b[0m estructura01\u001b[38;5;241m.\u001b[39mLoads(CM_load, CV_load)\n",
+      "Cell \u001b[1;32mIn[43], line 43\u001b[0m, in \u001b[0;36mEstructuraParametrica.__init__\u001b[1;34m(self, dx, dy, hz, tn, path)\u001b[0m\n\u001b[0;32m     38\u001b[0m spliceAbove  \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28;01mFalse\u001b[39;00m] \u001b[38;5;241m*\u001b[39m \u001b[38;5;28mlen\u001b[39m(hz)      \u001b[38;5;66;03m# sin empalmes\u001b[39;00m\n\u001b[0;32m     40\u001b[0m \u001b[38;5;66;03m# --------------------------\u001b[39;00m\n\u001b[0;32m     41\u001b[0m \u001b[38;5;66;03m# Asignar grillas\u001b[39;00m\n\u001b[0;32m     42\u001b[0m \u001b[38;5;66;03m# --------------------------\u001b[39;00m\n\u001b[1;32m---> 43\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mGridSys\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mSetGridSys\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m     44\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m               \u001b[49m\u001b[38;5;66;43;03m# número del sistema de grillas\u001b[39;49;00m\n\u001b[0;32m     45\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m            \u001b[49m\u001b[38;5;66;43;03m# sistema ortogonal\u001b[39;49;00m\n\u001b[0;32m     46\u001b[0m \u001b[43m    \u001b[49m\u001b[43mnumX\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgrid_x\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnamesX\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     47\u001b[0m \u001b[43m    \u001b[49m\u001b[43mnumY\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgrid_y\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnamesY\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     48\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[43m]\u001b[49m\u001b[43m        \u001b[49m\u001b[38;5;66;43;03m# sin grillas anguladas\u001b[39;49;00m\n\u001b[0;32m     49\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     51\u001b[0m \u001b[38;5;66;03m# --------------------------\u001b[39;00m\n\u001b[0;32m     52\u001b[0m \u001b[38;5;66;03m# Asignar pisos\u001b[39;00m\n\u001b[0;32m     53\u001b[0m \u001b[38;5;66;03m# --------------------------\u001b[39;00m\n\u001b[0;32m     54\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msmodel\u001b[38;5;241m.\u001b[39mStory\u001b[38;5;241m.\u001b[39mSetStories(\n\u001b[0;32m     55\u001b[0m     \u001b[38;5;28mlen\u001b[39m(storyHeights),\n\u001b[0;32m     56\u001b[0m     storyHeights,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     60\u001b[0m     spliceAbove\n\u001b[0;32m     61\u001b[0m )\n",
+      "\u001b[1;31mTypeError\u001b[0m: call takes exactly 5 arguments (12 given)"
      ]
     }
    ],
@@ -233,20 +257,23 @@
     "\n",
     "# modelA = {\n",
     "#     \"geometria\": {\n",
-    "#         'distancia de vanos en X': [],\n",
-    "#         'distancia de vanos en Y': [],\n",
-    "#         'alturas de entrepiso': [],\n",
+    "#         'distancia de vanos en X': [500, 400, 500],\n",
+    "#         'distancia de vanos en Y': [400, 300, 300, 400],\n",
+    "#         'alturas de entrepiso': [280] + numStorys*[300],\n",
     "#     },\n",
-    "#     \"Cargas\": {},\n",
+    "#     \"Cargas\": {\n",
+    "#         'Carga muerta': 100e-4,\n",
+    "#         'Carga viva': 200e-4\n",
+    "#     },\n",
     "#     \"Unidades\": {}\n",
     "# }\n",
     "\n",
-    "numStorys = 8                       # Numero de pisos\n",
+    "numStorys = 1                       # Numero de pisos --- si es 0 tendra un piso y ...\n",
     "dx = [500, 400, 500]                # Distancia de vanos - Eje X\n",
     "dy = [400, 300, 300, 400]           # Distancia de vanos - Eje Y\n",
     "hz = [280] + numStorys*[300]        # Atluras de entrepisos\n",
     "\n",
-    "units = 14                              # \n",
+    "units = 14                          #  kgf_cm_C = 14, kN_m_C = 6\n",
     "path = 'model02/Modelo_Parametrico.xlsx'   # Nombre del Archivo\n",
     "\n",
     "tn = 20     # Espesor de losa\n",
@@ -254,30 +281,19 @@
     "CM_load = 100e-4                    # Carga Muerta\n",
     "CV_load = 200e-4                    # Carga Viva\n",
     "\n",
-    "x = Estructura_Parametrica(dx, dy, hz, units, tn, CM_load, CV_load, path)"
+    "estructura01 = EstructuraParametrica(dx, dy, hz, tn, path)\n",
+    "estructura01.set_units(units)\n",
+    "estructura01.Loads(CM_load, CV_load)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "COMError",
-     "evalue": "(-2147467261, 'Invalid pointer', ('Object reference not set to an instance of an object.', 'System.Windows.Forms', None, 0, None))",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mCOMError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[9], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mx\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mclose_software\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m exit(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m)\n",
-      "Cell \u001b[1;32mIn[2], line 178\u001b[0m, in \u001b[0;36mEstructura_Parametrica.close_software\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    177\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mclose_software\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m--> 178\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mSapModel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mFile\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mSave\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mname_project\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m.edb\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m            \u001b[38;5;66;03m# Guarda el modelo\u001b[39;00m\n\u001b[0;32m    180\u001b[0m     \u001b[38;5;66;03m# self.SapModel.ApplicationExit(False)                            # Cierra ETABS sin guardar cambios adicionales\u001b[39;00m\n\u001b[0;32m    181\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNo se pudo cerrar\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mif\u001b[39;00m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mSapModel\u001b[38;5;241m.\u001b[39mApplicationExit(\u001b[38;5;28;01mFalse\u001b[39;00m)) \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSe cerro con exito.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mCOMError\u001b[0m: (-2147467261, 'Invalid pointer', ('Object reference not set to an instance of an object.', 'System.Windows.Forms', None, 0, None))"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "x.close_software()\n",
-    "exit(-1)"
+    "# estructura01.close_software()\n",
+    "# exit(-1)"
    ]
   },
   {
